[gd_scene load_steps=8 format=3 uid="uid://cb3nlcngtsxd0"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_4ootf"]
[ext_resource type="Texture2D" uid="uid://b4bbxlbd4ui6x" path="res://assets/backcircleship.png" id="2_v5b3g"]
[ext_resource type="Texture2D" uid="uid://7gerdq4g6fka" path="res://assets/gamelogo.png" id="3_2it0q"]
[ext_resource type="AudioStream" uid="uid://bhlifx0pmjl46" path="res://assets/sounds/ultra-kill-138765.mp3" id="4_uw1fn"]
[ext_resource type="PackedScene" uid="uid://d1385clksisa6" path="res://scenes/weapon_shop.tscn" id="5_6v7a6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fvqsf"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xcp3m"]
load_path = "res://.godot/imported/ship.png-0b2a8e7064d2d88a0149f9491a8ea676.ctex"

[node name="Node2D" type="Node2D"]
material = SubResource("CanvasItemMaterial_fvqsf")
script = ExtResource("1_4ootf")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -16.0
offset_right = 50.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Play game"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -15.5
offset_right = 44.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Gear (werkt niet)"
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -15.5
offset_right = 44.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Weapons"
metadata/_edit_use_anchors_ = true

[node name="Ship" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(956, 804)
scale = Vector2(0.7, 0.7)
texture = SubResource("CompressedTexture2D_xcp3m")

[node name="Backcircleship" type="Sprite2D" parent="."]
position = Vector2(956, 780)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_v5b3g")

[node name="Gamelogo" type="Sprite2D" parent="."]
position = Vector2(960, 320)
texture = ExtResource("3_2it0q")

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uw1fn")
volume_db = -9.905

[node name="Weapon_shop" parent="." instance=ExtResource("5_6v7a6")]

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_button2_pressed"]
[connection signal="pressed" from="Control/Button3" to="." method="_on_button_3_pressed"]
